@@ -72,6 +72,7 @@ CHANGELOG Roundcube Webmail
 - Managesieve: Fix missing Save button in Edit Filter Set page of Classic skin (#6154)
 - Fix duplicated labels in Test SMTP Config section (#6166)
 - Fix PHP Warning: exif_read_data(...): Illegal IFD size (#6169)
+- Enigma: Fix key generation in Safari by upgrade to OpenPGP 2.6.2 (#6149)
 
 RELEASE 1.3.4
 -------------
